ch-addFrontendSide